--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastmcp>=2.12.5",
     "langchain-google-vertexai",
     "langchain-google-cloud-sql-pg",
+    "langgraph",
     "pydantic>=2.0",
     "uvicorn>=0.30.0",
 ]
