fix: standardize DATABASE_PASSWORD for local testing
- Changed CLOUDSQL_USER from postgresql to postgres
- Created Cloud SQL proxy management scripts (start/stop)
- Added comprehensive local development setup documentation
- Updated README, DATABASE_SETUP, and inline code comments
- Added proxy automation with v1/v2 support and port conflict handling
- Updated agent context with local dev setup guidance

Fixes authentication errors when testing with Cloud SQL proxy locally.
Feature 014-fix-local-database - 18 of 20 tasks complete (90%)

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,15 @@ GCP_PROJECT_NUMBER=666924716777
 GCP_REGION=us-central1
 
 # Cloud SQL Configuration
+# For local development with Cloud SQL proxy (password authentication):
 CLOUDSQL_INSTANCE=hansard-db
 CLOUDSQL_DATABASE=hansard
 CLOUDSQL_USER=postgres
+DATABASE_PASSWORD=your_database_password_here  # Required for local proxy connection
+
+# For production Cloud Run deployment (IAM authentication):
+# Omit CLOUDSQL_USER and DATABASE_PASSWORD - IAM auth will be used automatically
+# Service account authentication via Cloud SQL Python Connector
 
 # Vertex AI Configuration
 VERTEX_AI_LOCATION=us-central1
