--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,17 @@ description = "FastMCP server for Australian Hansard RAG with ChatGPT Developer 
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.12.5",
-    "langchain",
-    "langchain-google-vertexai",
-    "langchain-google-cloud-sql-pg",
+    "langchain>=0.3.0",
+    "langchain-text-splitters>=0.3.0",
+    "langchain-google-vertexai>=2.0.0",
+    # Temporary: keep wrapper until new backend is fully wired, then remove
+    "langchain-google-cloud-sql-pg>=0.14.0",
+    # New vector backend dependencies (016-langchain-postgres-upgrade)
+    "langchain-postgres>=0.0.12",
+    "sqlalchemy>=2.0.0",
+    "cloud-sql-python-connector[pg]>=1.4.0",
+    "psycopg[binary]>=3.1,<3.3",  # Pinned to minor version range for stability
+    "pgvector>=0.3.0",
     "langgraph",
     "pydantic>=2.0",
     "uvicorn>=0.30.0",
