feat(018): MCP tools quality improvements with OAuth authentication
- Add OAuth authentication enforcement (--no-allow-unauthenticated)
- Update Cloud Run deployment configuration in cloudbuild.yaml
- Add GitHub OAuth provider configuration to server.py
- Enhance tool documentation with Returns sections
- Create async testing framework for MCP tools
- Add comprehensive deployment guides and automation script
- Update README with Feature 018 reference and OAuth info
- Update copilot-instructions with technology stack

Feature 018 improves best practices compliance from 0.39/1.00 to target 0.80/1.00
Includes: Documentation enhancements, async testing framework, compliance dashboard

Related files:
- specs/018-mcp-tools-quality-improvements/: Complete feature specification
- deploy_feature_018.sh: Automated deployment script
- FEATURE_018_DEPLOYMENT_GUIDE.md: Comprehensive deployment guide
- DEPLOYMENT_READY.md: Quick deployment reference

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,7 +23,7 @@ steps:
       - 'push'
       - 'gcr.io/$PROJECT_ID/hansard-mcp:latest'
 
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run with OAuth authentication enabled
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -32,8 +32,18 @@ steps:
       - '--image=gcr.io/$PROJECT_ID/hansard-mcp:$SHORT_SHA'
       - '--region=us-central1'
       - '--platform=managed'
-      - '--allow-unauthenticated'
-      - '--set-env-vars=PYTHONPATH=/app/src'
+      - '--no-allow-unauthenticated'
+      - '--set-env-vars=PYTHONPATH=/app/src,FASTMCP_SERVER_AUTH=fastmcp.server.auth.providers.github.GitHubProvider,FASTMCP_SERVER_AUTH_GITHUB_BASE_URL=https://mcp.simonkennedymp.com.au'
+      - '--set-secrets=FASTMCP_SERVER_AUTH_GITHUB_CLIENT_ID=github-oauth-client-id:latest,FASTMCP_SERVER_AUTH_GITHUB_CLIENT_SECRET=github-oauth-client-secret:latest'
+      - '--cpu=2'
+      - '--memory=2Gi'
+      - '--max-instances=10'
+      - '--timeout=300'
+      - '--startup-cpu-boost'
+      - '--vpc-connector=hansard-vpc-connector'
+      - '--vpc-egress=private-ranges-only'
+      - '--add-cloudsql-instances=skai-fastmcp-cloudrun:us-central1:hansard-db-v2'
+      - '--service-account=666924716777-compute@developer.gserviceaccount.com'
 
 # Store images in Google Container Registry
 images:
