--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     # New vector backend dependencies (016-langchain-postgres-upgrade)
     "langchain-postgres>=0.0.12",
     "sqlalchemy>=2.0.0",
-    "cloud-sql-python-connector[pg8000]>=1.4.0",
+    # Requires 1.8+ for stable IAM DB Auth with PostgreSQL via pg8000; 1.10+ recommended
+    "cloud-sql-python-connector[pg8000]>=1.10.0",
     "pg8000>=1.30.0",  # Required for Cloud SQL Connector pg8000 driver
     "psycopg[binary]>=3.1,<3.3",  # Pinned to minor version range for stability
     "pgvector>=0.3.0",
